[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/TowerSection/TowerSection.gd" type="Script" id=1]
[ext_resource path="res://Scenes/TowerSection/Engine.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/TowerSection/TowerSectionSprite.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/TowerSection/AutoTrigger.tscn" type="PackedScene" id=4]
[ext_resource path="res://Art/Tower/TowerSectionGlow.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Audio/SfxPlayer.tscn" type="PackedScene" id=6]
[ext_resource path="res://Audio/SectionBumpSFX.wav" type="AudioStream" id=7]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 51.7971

[node name="TowerSection" type="KinematicBody2D" groups=[
"has_collided_signal",
"has_engine",
]]

input_pickable = true
collision_layer = 3
collision_mask = 9
collision/safe_margin = 0.001
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pickable", "Transform", "collision" ]

[node name="Engine" parent="." index="0" instance=ExtResource( 2 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="TowerSection" parent="." index="2" instance=ExtResource( 3 )]

editor/display_folded = true

[node name="Symbol" type="Sprite" parent="TowerSection" index="2"]

position = Vector2( -0.689081, 0.63348 )
_sections_unfolded = [ "Transform" ]

[node name="AutoTrigger" parent="." index="3" instance=ExtResource( 4 )]

[node name="TowerSectionGlow" type="Sprite" parent="." index="4"]

visible = false
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Z Index" ]

[node name="DestroyTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 5.0
one_shot = true
autostart = false

[node name="SfxPlayer" parent="." index="6" instance=ExtResource( 6 )]

position = Vector2( -1.89523, -1.66541 )
stream = ExtResource( 7 )
volume = -12


